# UX_keyboards

./: .gitignore  nuxt.config.js  package-lock.json  package.json
C/: CMakeLists.txt  main.c
assets/css/: constants.scss
assets/js/: helper.js  texts.js
components/: Node.vue  OutputMenu.vue  SimpleKeyboardButton.vue  SimpleKeyboardComponent.vue  SimpleKeyboardString.vue
components/nodesKeyboard/: NodesKeyboard.vue  NodesKeyboardComponent.vue
components/simpleKeyboard/: SimpleKeyboardButton.vue  SimpleKeyboardComponent.vue  SimpleKeyboardString.vue
mixins/: timeEntryMixin.js
pages/: NodesKeyboard.vue  SimpleKeyboard.vue  index.vue  nodesKeyboard.vue  simpleKeyboard.vue
